# pdf-parse

./: .env.example  .gitignore  README.md  marketplace-info.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  server.py  utils.py
src/tools/: __init__.py  references.py  sections.py  tables.py  text.py
tests/: __init__.py  test_server.py  test_tools.py
