[project]
name = "pdf-parse"
version = "0.1.0"
description = "MCP server for parsing PDFs into text, sections, tables, and references"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dedalus-mcp>=0.4.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "httpx>=0.27",
]

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
